--- a/Source/OmniCoreDrill/OmniCoreDrill.csproj
+++ b/Source/OmniCoreDrill/OmniCoreDrill.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
+    <Optimize>true</Optimize>
     <OutputPath>..\..\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -50,8 +52,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrillingProperties.cs" />
+    <Compile Include="Settings\GlobalDrillParameters.cs" />
+    <Compile Include="Settings\MaterialParameters.cs" />
+    <Compile Include="Settings\Multiplier.cs" />
     <Compile Include="OmniCoreDrill.cs" />
+    <Compile Include="OmniCoreDrill.Settings.cs" />
     <Compile Include="Patches\DefGenerator_PreResolve.cs" />
+    <Compile Include="Settings\GameMaterialParameters.cs" />
     <Compile Include="ThingDefGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="[Generated]\Defs.cs">
@@ -64,6 +72,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LanguageKeys.tt</DependentUpon>
     </Compile>
+    <Compile Include="[GUI]\Widgets.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="[Generated]\Defs.tt">
@@ -78,12 +87,29 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
+       Other similar extension points exist, see Microsoft.Common.targets.-->
   <Target Name="BeforeBuild">
+    <PropertyGroup>
+      <versionFile>$(ProjectDir)\Properties\version.txt</versionFile>
+    </PropertyGroup>
+    <Version VersionFile="$(versionFile)" RevisionType="Increment" StartDate="2017/08/22" Major="1" Minor="1" Build="0" />
+    <ReadLinesFromFile File="$(versionFile)">
+      <Output TaskParameter="Lines" ItemName="combinedVersion" />
+    </ReadLinesFromFile>
+    <AssemblyInfo OutputFile="$(ProjectDir)\Properties\AssemblyInfo.cs" CodeLanguage="CS" AssemblyTitle="OmniCoreDrill" AssemblyCopyright="Copyright © DoctorVanGogh 2017" ComVisible="false" Guid="7b307eac-98fb-44c4-a5e1-c4a849842bf9" AssemblyVersion="@(combinedVersion)" />
   </Target>
   <Target Name="AfterBuild">
   </Target>
-  -->
+  <Import Project="..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets" Condition="Exists('..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets'))" />
+  </Target>
 </Project>
