--- a/Source/OmniCoreDrill/OmniCoreDrill.csproj
+++ b/Source/OmniCoreDrill/OmniCoreDrill.csproj
@@ -88,6 +88,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Settings.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
