--- a/Source/OmniCoreDrill/OmniCoreDrill.csproj
+++ b/Source/OmniCoreDrill/OmniCoreDrill.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Settings\GameMaterialParameters.cs" />
     <Compile Include="ThingDefGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnfinishedDrillingPlan.cs" />
     <Compile Include="[Generated]\Defs.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
