update for 1.1|1.0 release

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 Source/ export-ignore
 
 Textures/Things/Items/Unfinished/Blueprint.psd export-ignore
+v1.1/Assemblies/0Harmony.dll export-ignore
+Unity/ export-ignore
