--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,4 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/visualstudio,visualstudiocode
+v1.1/Assemblies/0Harmony.dll
