cleanup harmony dependency

--- a/Source/OmniCoreDrill/OmniCoreDrill.csproj
+++ b/Source/OmniCoreDrill/OmniCoreDrill.csproj
@@ -123,4 +123,7 @@
   </Target>
   <Target Name="AfterBuild">
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>DEL "$(OutDir)\0Harmony.dll"</PostBuildEvent>
+  </PropertyGroup>  
 </Project>
